// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/ExpandableList/ExpandableList.tools.svelte: Albums 1`] = `
<div>
  <span
    class="undefined albums svelte-uiewq8"
  >
    <h3
      class="svelte-uiewq8"
    >
      5 albums
    </h3>
     
    <ul
      class="svelte-uiewq8"
    >
      <li
        class="svelte-uiewq8"
      >
         
        <span
          class="svelte-9e8ghi"
          role="article"
        >
          <div
            class="content svelte-9e8ghi"
          >
            <span
              class="artwork svelte-9e8ghi"
            >
              <img
                alt="./cover.jpg"
                class="h-full w-full rounded-sm svelte-dtt58s"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-9e8ghi"
            >
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-9e8ghi"
          >
            <h3
              class="svelte-9e8ghi"
            >
              Diamonds on the inside
            </h3>
             
            <h4
              class="svelte-1vmk98n"
              slot="details"
            >
              by 
              <a
                class="underlined"
                href="#/artist/1"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
              , 
              <a
                class="underlined"
                href="#/artist/2"
                onclick="event.stopPropagation()"
              >
                The Innocent Criminals
              </a>
              
               
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-uiewq8"
      >
         
        <span
          class="svelte-9e8ghi"
          role="article"
        >
          <div
            class="content svelte-9e8ghi"
          >
            <span
              class="artwork svelte-9e8ghi"
            >
              <img
                alt="./cover.jpg"
                class="h-full w-full rounded-sm svelte-dtt58s"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-9e8ghi"
            >
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-9e8ghi"
          >
            <h3
              class="svelte-9e8ghi"
            >
              Diamonds on the inside
            </h3>
             
            <h4
              class="svelte-1vmk98n"
              slot="details"
            >
              by 
              <a
                class="underlined"
                href="#/artist/1"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
              , 
              <a
                class="underlined"
                href="#/artist/2"
                onclick="event.stopPropagation()"
              >
                The Innocent Criminals
              </a>
              
               
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-uiewq8"
      >
         
        <span
          class="svelte-9e8ghi"
          role="article"
        >
          <div
            class="content svelte-9e8ghi"
          >
            <span
              class="artwork svelte-9e8ghi"
            >
              <img
                alt="./cover.jpg"
                class="h-full w-full rounded-sm svelte-dtt58s"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-9e8ghi"
            >
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-9e8ghi"
          >
            <h3
              class="svelte-9e8ghi"
            >
              Diamonds on the inside
            </h3>
             
            <h4
              class="svelte-1vmk98n"
              slot="details"
            >
              by 
              <a
                class="underlined"
                href="#/artist/1"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
              , 
              <a
                class="underlined"
                href="#/artist/2"
                onclick="event.stopPropagation()"
              >
                The Innocent Criminals
              </a>
              
               
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-uiewq8"
      >
         
        <span
          class="svelte-9e8ghi"
          role="article"
        >
          <div
            class="content svelte-9e8ghi"
          >
            <span
              class="artwork svelte-9e8ghi"
            >
              <img
                alt="./cover.jpg"
                class="h-full w-full rounded-sm svelte-dtt58s"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-9e8ghi"
            >
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-9e8ghi"
          >
            <h3
              class="svelte-9e8ghi"
            >
              Diamonds on the inside
            </h3>
             
            <h4
              class="svelte-1vmk98n"
              slot="details"
            >
              by 
              <a
                class="underlined"
                href="#/artist/1"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
              , 
              <a
                class="underlined"
                href="#/artist/2"
                onclick="event.stopPropagation()"
              >
                The Innocent Criminals
              </a>
              
               
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-uiewq8"
      >
         
        <span
          class="svelte-9e8ghi"
          role="article"
        >
          <div
            class="content svelte-9e8ghi"
          >
            <span
              class="artwork svelte-9e8ghi"
            >
              <img
                alt="./cover.jpg"
                class="h-full w-full rounded-sm svelte-dtt58s"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-9e8ghi"
            >
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-9e8ghi"
          >
            <h3
              class="svelte-9e8ghi"
            >
              Diamonds on the inside
            </h3>
             
            <h4
              class="svelte-1vmk98n"
              slot="details"
            >
              by 
              <a
                class="underlined"
                href="#/artist/1"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
              , 
              <a
                class="underlined"
                href="#/artist/2"
                onclick="event.stopPropagation()"
              >
                The Innocent Criminals
              </a>
              
               
            </h4>
          </header>
        </span>
         
      </li>
    </ul>
     
    <iframe
      aria-hidden="true"
      src="about:blank"
      style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
  </span>
  
</div>
`;

exports[`Toolshot components/ExpandableList/ExpandableList.tools.svelte: Artists 1`] = `
<div>
  <span
    class="undefined artists svelte-uiewq8"
  >
    <h3
      class="svelte-uiewq8"
    >
      5 artists
    </h3>
     
    <ul
      class="svelte-uiewq8"
    >
      <li
        class="svelte-uiewq8"
      >
         
        <span
          class="svelte-9e8ghi"
          role="article"
        >
          <div
            class="content svelte-9e8ghi"
          >
            <span
              class="artwork svelte-9e8ghi"
            >
              <img
                alt="./avatar.jpg"
                class="h-full w-full rounded-full svelte-dtt58s"
                height="256"
                loading="lazy"
                src="./avatar.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-9e8ghi"
            >
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-9e8ghi"
          >
            <h3
              class="svelte-9e8ghi"
            >
              Foo Fighters
            </h3>
             
            <h4
              class="svelte-1vmk98n"
              slot="details"
            >
              2 albums
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-uiewq8"
      >
         
        <span
          class="svelte-9e8ghi"
          role="article"
        >
          <div
            class="content svelte-9e8ghi"
          >
            <span
              class="artwork svelte-9e8ghi"
            >
              <img
                alt="./avatar.jpg"
                class="h-full w-full rounded-full svelte-dtt58s"
                height="256"
                loading="lazy"
                src="./avatar.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-9e8ghi"
            >
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-9e8ghi"
          >
            <h3
              class="svelte-9e8ghi"
            >
              Foo Fighters
            </h3>
             
            <h4
              class="svelte-1vmk98n"
              slot="details"
            >
              2 albums
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-uiewq8"
      >
         
        <span
          class="svelte-9e8ghi"
          role="article"
        >
          <div
            class="content svelte-9e8ghi"
          >
            <span
              class="artwork svelte-9e8ghi"
            >
              <img
                alt="./avatar.jpg"
                class="h-full w-full rounded-full svelte-dtt58s"
                height="256"
                loading="lazy"
                src="./avatar.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-9e8ghi"
            >
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-9e8ghi"
          >
            <h3
              class="svelte-9e8ghi"
            >
              Foo Fighters
            </h3>
             
            <h4
              class="svelte-1vmk98n"
              slot="details"
            >
              2 albums
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-uiewq8"
      >
         
        <span
          class="svelte-9e8ghi"
          role="article"
        >
          <div
            class="content svelte-9e8ghi"
          >
            <span
              class="artwork svelte-9e8ghi"
            >
              <img
                alt="./avatar.jpg"
                class="h-full w-full rounded-full svelte-dtt58s"
                height="256"
                loading="lazy"
                src="./avatar.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-9e8ghi"
            >
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-9e8ghi"
          >
            <h3
              class="svelte-9e8ghi"
            >
              Foo Fighters
            </h3>
             
            <h4
              class="svelte-1vmk98n"
              slot="details"
            >
              2 albums
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-uiewq8"
      >
         
        <span
          class="svelte-9e8ghi"
          role="article"
        >
          <div
            class="content svelte-9e8ghi"
          >
            <span
              class="artwork svelte-9e8ghi"
            >
              <img
                alt="./avatar.jpg"
                class="h-full w-full rounded-full svelte-dtt58s"
                height="256"
                loading="lazy"
                src="./avatar.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-9e8ghi"
            >
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1vd9h50"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-9e8ghi"
          >
            <h3
              class="svelte-9e8ghi"
            >
              Foo Fighters
            </h3>
             
            <h4
              class="svelte-1vmk98n"
              slot="details"
            >
              2 albums
            </h4>
          </header>
        </span>
         
      </li>
    </ul>
     
    <iframe
      aria-hidden="true"
      src="about:blank"
      style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
  </span>
  
</div>
`;

exports[`Toolshot components/ExpandableList/ExpandableList.tools.svelte: Tracks 1`] = `
<div>
  <span
    class="undefined tracks svelte-uiewq8"
  >
    <h3
      class="svelte-uiewq8"
    >
      5 tracks
    </h3>
     
    <ul
      class="svelte-uiewq8"
    >
      <li
        class="svelte-uiewq8"
      >
        <div
          class="undefined root svelte-1wnrcpi"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-dtt58s"
              height="256"
              loading="lazy"
              src="./cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-1wnrcpi"
          >
            <span
              class="title svelte-1wnrcpi"
            >
              Mama got a girlfriend
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
            </span>
          </div>
           
           
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper svelte-1x6dshm"
          >
            <button
              class="iconOnly noBorder svelte-1vd9h50"
            >
              <i
                class="material-icons svelte-1vd9h50"
              >
                more_vert
              </i>
               
               
              
               
            </button>
          </span>
           
          
        </div>
         
      </li>
      <li
        class="svelte-uiewq8"
      >
        <div
          class="undefined root svelte-1wnrcpi"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-dtt58s"
              height="256"
              loading="lazy"
              src="./cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-1wnrcpi"
          >
            <span
              class="title svelte-1wnrcpi"
            >
              Mama got a girlfriend
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
            </span>
          </div>
           
           
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper svelte-1x6dshm"
          >
            <button
              class="iconOnly noBorder svelte-1vd9h50"
            >
              <i
                class="material-icons svelte-1vd9h50"
              >
                more_vert
              </i>
               
               
              
               
            </button>
          </span>
           
          
        </div>
         
      </li>
      <li
        class="svelte-uiewq8"
      >
        <div
          class="undefined root svelte-1wnrcpi"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-dtt58s"
              height="256"
              loading="lazy"
              src="./cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-1wnrcpi"
          >
            <span
              class="title svelte-1wnrcpi"
            >
              Mama got a girlfriend
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
            </span>
          </div>
           
           
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper svelte-1x6dshm"
          >
            <button
              class="iconOnly noBorder svelte-1vd9h50"
            >
              <i
                class="material-icons svelte-1vd9h50"
              >
                more_vert
              </i>
               
               
              
               
            </button>
          </span>
           
          
        </div>
         
      </li>
      <li
        class="svelte-uiewq8"
      >
        <div
          class="undefined root svelte-1wnrcpi"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-dtt58s"
              height="256"
              loading="lazy"
              src="./cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-1wnrcpi"
          >
            <span
              class="title svelte-1wnrcpi"
            >
              Mama got a girlfriend
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
            </span>
          </div>
           
           
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper svelte-1x6dshm"
          >
            <button
              class="iconOnly noBorder svelte-1vd9h50"
            >
              <i
                class="material-icons svelte-1vd9h50"
              >
                more_vert
              </i>
               
               
              
               
            </button>
          </span>
           
          
        </div>
         
      </li>
      <li
        class="svelte-uiewq8"
      >
        <div
          class="undefined root svelte-1wnrcpi"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-dtt58s"
              height="256"
              loading="lazy"
              src="./cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-1wnrcpi"
          >
            <span
              class="title svelte-1wnrcpi"
            >
              Mama got a girlfriend
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
            </span>
          </div>
           
           
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper svelte-1x6dshm"
          >
            <button
              class="iconOnly noBorder svelte-1vd9h50"
            >
              <i
                class="material-icons svelte-1vd9h50"
              >
                more_vert
              </i>
               
               
              
               
            </button>
          </span>
           
          
        </div>
         
      </li>
    </ul>
     
    <iframe
      aria-hidden="true"
      src="about:blank"
      style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
  </span>
  
</div>
`;
